src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenClzInt32" clzInt32 :: Op
foreign import ccall unsafe "BinaryenCtzInt32" ctzInt32 :: Op
foreign import ccall unsafe "BinaryenPopcntInt32" popcntInt32 :: Op
foreign import ccall unsafe "BinaryenNegFloat32" negFloat32 :: Op
foreign import ccall unsafe "BinaryenAbsFloat32" absFloat32 :: Op
foreign import ccall unsafe "BinaryenCeilFloat32" ceilFloat32 :: Op
foreign import ccall unsafe "BinaryenFloorFloat32" floorFloat32 :: Op
foreign import ccall unsafe "BinaryenTruncFloat32" truncFloat32 :: Op
foreign import ccall unsafe "BinaryenNearestFloat32" nearestFloat32 :: Op
foreign import ccall unsafe "BinaryenSqrtFloat32" sqrtFloat32 :: Op
foreign import ccall unsafe "BinaryenEqZInt32" eqZInt32 :: Op
foreign import ccall unsafe "BinaryenClzInt64" clzInt64 :: Op
foreign import ccall unsafe "BinaryenCtzInt64" ctzInt64 :: Op
foreign import ccall unsafe "BinaryenPopcntInt64" popcntInt64 :: Op
foreign import ccall unsafe "BinaryenNegFloat64" negFloat64 :: Op
foreign import ccall unsafe "BinaryenAbsFloat64" absFloat64 :: Op
foreign import ccall unsafe "BinaryenCeilFloat64" ceilFloat64 :: Op
foreign import ccall unsafe "BinaryenFloorFloat64" floorFloat64 :: Op
foreign import ccall unsafe "BinaryenTruncFloat64" truncFloat64 :: Op
foreign import ccall unsafe "BinaryenNearestFloat64" nearestFloat64 :: Op
foreign import ccall unsafe "BinaryenSqrtFloat64" sqrtFloat64 :: Op
foreign import ccall unsafe "BinaryenEqZInt64" eqZInt64 :: Op
foreign import ccall unsafe "BinaryenExtendSInt32" extendSInt32 :: Op
foreign import ccall unsafe "BinaryenExtendUInt32" extendUInt32 :: Op
foreign import ccall unsafe "BinaryenWrapInt64" wrapInt64 :: Op
foreign import ccall unsafe "BinaryenTruncSFloat32ToInt32" truncSFloat32ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSFloat32ToInt64" truncSFloat32ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncUFloat32ToInt32" truncUFloat32ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncUFloat32ToInt64" truncUFloat32ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncSFloat64ToInt32" truncSFloat64ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSFloat64ToInt64" truncSFloat64ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncUFloat64ToInt32" truncUFloat64ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncUFloat64ToInt64" truncUFloat64ToInt64 :: Op
foreign import ccall unsafe "BinaryenReinterpretFloat32" reinterpretFloat32 :: Op
foreign import ccall unsafe "BinaryenReinterpretFloat64" reinterpretFloat64 :: Op
foreign import ccall unsafe "BinaryenConvertSInt32ToFloat32" convertSInt32ToFloat32 :: Op
foreign import ccall unsafe "BinaryenConvertSInt32ToFloat64" convertSInt32ToFloat64 :: Op
foreign import ccall unsafe "BinaryenConvertUInt32ToFloat32" convertUInt32ToFloat32 :: Op
foreign import ccall unsafe "BinaryenConvertUInt32ToFloat64" convertUInt32ToFloat64 :: Op
foreign import ccall unsafe "BinaryenConvertSInt64ToFloat32" convertSInt64ToFloat32 :: Op
foreign import ccall unsafe "BinaryenConvertSInt64ToFloat64" convertSInt64ToFloat64 :: Op
foreign import ccall unsafe "BinaryenConvertUInt64ToFloat32" convertUInt64ToFloat32 :: Op
foreign import ccall unsafe "BinaryenConvertUInt64ToFloat64" convertUInt64ToFloat64 :: Op
foreign import ccall unsafe "BinaryenPromoteFloat32" promoteFloat32 :: Op
foreign import ccall unsafe "BinaryenDemoteFloat64" demoteFloat64 :: Op
foreign import ccall unsafe "BinaryenReinterpretInt32" reinterpretInt32 :: Op
foreign import ccall unsafe "BinaryenReinterpretInt64" reinterpretInt64 :: Op
foreign import ccall unsafe "BinaryenExtendS8Int32" extendS8Int32 :: Op
foreign import ccall unsafe "BinaryenExtendS16Int32" extendS16Int32 :: Op
foreign import ccall unsafe "BinaryenExtendS8Int64" extendS8Int64 :: Op
foreign import ccall unsafe "BinaryenExtendS16Int64" extendS16Int64 :: Op
foreign import ccall unsafe "BinaryenExtendS32Int64" extendS32Int64 :: Op
foreign import ccall unsafe "BinaryenAddInt32" addInt32 :: Op
foreign import ccall unsafe "BinaryenSubInt32" subInt32 :: Op
foreign import ccall unsafe "BinaryenMulInt32" mulInt32 :: Op
foreign import ccall unsafe "BinaryenDivSInt32" divSInt32 :: Op
foreign import ccall unsafe "BinaryenDivUInt32" divUInt32 :: Op
foreign import ccall unsafe "BinaryenRemSInt32" remSInt32 :: Op
foreign import ccall unsafe "BinaryenRemUInt32" remUInt32 :: Op
foreign import ccall unsafe "BinaryenAndInt32" andInt32 :: Op
foreign import ccall unsafe "BinaryenOrInt32" orInt32 :: Op
foreign import ccall unsafe "BinaryenXorInt32" xorInt32 :: Op
foreign import ccall unsafe "BinaryenShlInt32" shlInt32 :: Op
foreign import ccall unsafe "BinaryenShrUInt32" shrUInt32 :: Op
foreign import ccall unsafe "BinaryenShrSInt32" shrSInt32 :: Op
foreign import ccall unsafe "BinaryenRotLInt32" rotLInt32 :: Op
foreign import ccall unsafe "BinaryenRotRInt32" rotRInt32 :: Op
foreign import ccall unsafe "BinaryenEqInt32" eqInt32 :: Op
foreign import ccall unsafe "BinaryenNeInt32" neInt32 :: Op
foreign import ccall unsafe "BinaryenLtSInt32" ltSInt32 :: Op
foreign import ccall unsafe "BinaryenLtUInt32" ltUInt32 :: Op
foreign import ccall unsafe "BinaryenLeSInt32" leSInt32 :: Op
foreign import ccall unsafe "BinaryenLeUInt32" leUInt32 :: Op
foreign import ccall unsafe "BinaryenGtSInt32" gtSInt32 :: Op
foreign import ccall unsafe "BinaryenGtUInt32" gtUInt32 :: Op
foreign import ccall unsafe "BinaryenGeSInt32" geSInt32 :: Op
foreign import ccall unsafe "BinaryenGeUInt32" geUInt32 :: Op
foreign import ccall unsafe "BinaryenAddInt64" addInt64 :: Op
foreign import ccall unsafe "BinaryenSubInt64" subInt64 :: Op
foreign import ccall unsafe "BinaryenMulInt64" mulInt64 :: Op
foreign import ccall unsafe "BinaryenDivSInt64" divSInt64 :: Op
foreign import ccall unsafe "BinaryenDivUInt64" divUInt64 :: Op
foreign import ccall unsafe "BinaryenRemSInt64" remSInt64 :: Op
foreign import ccall unsafe "BinaryenRemUInt64" remUInt64 :: Op
foreign import ccall unsafe "BinaryenAndInt64" andInt64 :: Op
foreign import ccall unsafe "BinaryenOrInt64" orInt64 :: Op
foreign import ccall unsafe "BinaryenXorInt64" xorInt64 :: Op
foreign import ccall unsafe "BinaryenShlInt64" shlInt64 :: Op
foreign import ccall unsafe "BinaryenShrUInt64" shrUInt64 :: Op
foreign import ccall unsafe "BinaryenShrSInt64" shrSInt64 :: Op
foreign import ccall unsafe "BinaryenRotLInt64" rotLInt64 :: Op
foreign import ccall unsafe "BinaryenRotRInt64" rotRInt64 :: Op
foreign import ccall unsafe "BinaryenEqInt64" eqInt64 :: Op
foreign import ccall unsafe "BinaryenNeInt64" neInt64 :: Op
foreign import ccall unsafe "BinaryenLtSInt64" ltSInt64 :: Op
foreign import ccall unsafe "BinaryenLtUInt64" ltUInt64 :: Op
foreign import ccall unsafe "BinaryenLeSInt64" leSInt64 :: Op
foreign import ccall unsafe "BinaryenLeUInt64" leUInt64 :: Op
foreign import ccall unsafe "BinaryenGtSInt64" gtSInt64 :: Op
foreign import ccall unsafe "BinaryenGtUInt64" gtUInt64 :: Op
foreign import ccall unsafe "BinaryenGeSInt64" geSInt64 :: Op
foreign import ccall unsafe "BinaryenGeUInt64" geUInt64 :: Op
foreign import ccall unsafe "BinaryenAddFloat32" addFloat32 :: Op
foreign import ccall unsafe "BinaryenSubFloat32" subFloat32 :: Op
foreign import ccall unsafe "BinaryenMulFloat32" mulFloat32 :: Op
foreign import ccall unsafe "BinaryenDivFloat32" divFloat32 :: Op
foreign import ccall unsafe "BinaryenCopySignFloat32" copySignFloat32 :: Op
foreign import ccall unsafe "BinaryenMinFloat32" minFloat32 :: Op
foreign import ccall unsafe "BinaryenMaxFloat32" maxFloat32 :: Op
foreign import ccall unsafe "BinaryenEqFloat32" eqFloat32 :: Op
foreign import ccall unsafe "BinaryenNeFloat32" neFloat32 :: Op
foreign import ccall unsafe "BinaryenLtFloat32" ltFloat32 :: Op
foreign import ccall unsafe "BinaryenLeFloat32" leFloat32 :: Op
foreign import ccall unsafe "BinaryenGtFloat32" gtFloat32 :: Op
foreign import ccall unsafe "BinaryenGeFloat32" geFloat32 :: Op
foreign import ccall unsafe "BinaryenAddFloat64" addFloat64 :: Op
foreign import ccall unsafe "BinaryenSubFloat64" subFloat64 :: Op
foreign import ccall unsafe "BinaryenMulFloat64" mulFloat64 :: Op
foreign import ccall unsafe "BinaryenDivFloat64" divFloat64 :: Op
foreign import ccall unsafe "BinaryenCopySignFloat64" copySignFloat64 :: Op
foreign import ccall unsafe "BinaryenMinFloat64" minFloat64 :: Op
foreign import ccall unsafe "BinaryenMaxFloat64" maxFloat64 :: Op
foreign import ccall unsafe "BinaryenEqFloat64" eqFloat64 :: Op
foreign import ccall unsafe "BinaryenNeFloat64" neFloat64 :: Op
foreign import ccall unsafe "BinaryenLtFloat64" ltFloat64 :: Op
foreign import ccall unsafe "BinaryenLeFloat64" leFloat64 :: Op
foreign import ccall unsafe "BinaryenGtFloat64" gtFloat64 :: Op
foreign import ccall unsafe "BinaryenGeFloat64" geFloat64 :: Op
foreign import ccall unsafe "BinaryenMemorySize" memorySize :: Op
foreign import ccall unsafe "BinaryenMemoryGrow" memoryGrow :: Op
foreign import ccall unsafe "BinaryenAtomicRMWAdd" atomicRMWAdd :: Op
foreign import ccall unsafe "BinaryenAtomicRMWSub" atomicRMWSub :: Op
foreign import ccall unsafe "BinaryenAtomicRMWAnd" atomicRMWAnd :: Op
foreign import ccall unsafe "BinaryenAtomicRMWOr" atomicRMWOr :: Op
foreign import ccall unsafe "BinaryenAtomicRMWXor" atomicRMWXor :: Op
foreign import ccall unsafe "BinaryenAtomicRMWXchg" atomicRMWXchg :: Op
foreign import ccall unsafe "BinaryenTruncSatSFloat32ToInt32" truncSatSFloat32ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSatSFloat32ToInt64" truncSatSFloat32ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncSatUFloat32ToInt32" truncSatUFloat32ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSatUFloat32ToInt64" truncSatUFloat32ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncSatSFloat64ToInt32" truncSatSFloat64ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSatSFloat64ToInt64" truncSatSFloat64ToInt64 :: Op
foreign import ccall unsafe "BinaryenTruncSatUFloat64ToInt32" truncSatUFloat64ToInt32 :: Op
foreign import ccall unsafe "BinaryenTruncSatUFloat64ToInt64" truncSatUFloat64ToInt64 :: Op
foreign import ccall unsafe "BinaryenSplatVecI8x16" splatVecI8x16 :: Op
foreign import ccall unsafe "BinaryenExtractLaneSVecI8x16" extractLaneSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenExtractLaneUVecI8x16" extractLaneUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecI8x16" replaceLaneVecI8x16 :: Op
foreign import ccall unsafe "BinaryenSplatVecI16x8" splatVecI16x8 :: Op
foreign import ccall unsafe "BinaryenExtractLaneSVecI16x8" extractLaneSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenExtractLaneUVecI16x8" extractLaneUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecI16x8" replaceLaneVecI16x8 :: Op
foreign import ccall unsafe "BinaryenSplatVecI32x4" splatVecI32x4 :: Op
foreign import ccall unsafe "BinaryenExtractLaneVecI32x4" extractLaneVecI32x4 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecI32x4" replaceLaneVecI32x4 :: Op
foreign import ccall unsafe "BinaryenSplatVecI64x2" splatVecI64x2 :: Op
foreign import ccall unsafe "BinaryenExtractLaneVecI64x2" extractLaneVecI64x2 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecI64x2" replaceLaneVecI64x2 :: Op
foreign import ccall unsafe "BinaryenSplatVecF32x4" splatVecF32x4 :: Op
foreign import ccall unsafe "BinaryenExtractLaneVecF32x4" extractLaneVecF32x4 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecF32x4" replaceLaneVecF32x4 :: Op
foreign import ccall unsafe "BinaryenSplatVecF64x2" splatVecF64x2 :: Op
foreign import ccall unsafe "BinaryenExtractLaneVecF64x2" extractLaneVecF64x2 :: Op
foreign import ccall unsafe "BinaryenReplaceLaneVecF64x2" replaceLaneVecF64x2 :: Op
foreign import ccall unsafe "BinaryenEqVecI8x16" eqVecI8x16 :: Op
foreign import ccall unsafe "BinaryenNeVecI8x16" neVecI8x16 :: Op
foreign import ccall unsafe "BinaryenLtSVecI8x16" ltSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenLtUVecI8x16" ltUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenGtSVecI8x16" gtSVecI8x16 :: Op
